--- a/MusicMattersSite/Views/Home/EditProfileSettings.cshtml
+++ b/MusicMattersSite/Views/Home/EditProfileSettings.cshtml
@@ -37,7 +37,8 @@
                 </tr>
             }
             </table>
-</p>
+        </p>
+        <input type="submit" value="Save profile" />
     }
 </div>
 
